  * Fix Bug #860466: Fix incorrect permission propagation on $AppData\OCS Inventory NG\Agent in some cases
2.0.2, aka 2.0.2.0
  * Fix Bug #872768: Crash in Registry.cpp - "Run-Time Check Failure #2 - Stack around the variable 'lpstrData' was corrupted."
  * Ensure all array and objects are correctly freed
  * Fix Bug #859574: Switch to WMI to retreive Bios infos even if DMI access is successfull, but serial or model is not valid
  * Fix Bug #435068: Do not register multiple time a monitor with the same serial
  * Fix Bug #860466: Propagate inherited permissions from $AppData\OCS Inventory NG\Agent to Download directory
2.0.1, aka 2.0.1.0
  * Fix Bug #815891: Add /NOSOFTWARE support in service and installer 
2.0.0.24
  * Fix Bug #805039: Installer creates incomplete ocsinventory.ini
  * Fix Bug #802625: Agent does not store /TAG= on setup if used without /NOW
  * Fix Bud #754410: "OcsInvetory.exe Application Error" on some systems when using Server or Proxy credentials
  * Fix Bug #800810: Load XML function in TestSysInfo throws exception, thanks to Tommy
  * Setup ignore /NOW if /UPGRADE provided
2.0.0.23
  * Setup ignore /NOW if /UPGRADE provided
  * Fix Bud #754410 "OcsInvetory.exe Application Error" on some systems
  * In service, run agent without grabbing stdout/stderr, to avoid dealing with unclosed handles
  * Fix Bug ID 778335 empty values are shown as (null) in XML (produced by string conversion between unicode, ansi and UTF-8)
  * Fix bug #797182 "2 directories was created in APPDATA when upgrade windows agent"
  * When upgrading from agent 1.X, do not copy cacert.pem from INSTDIR to APPDATADIR if file exists into APPDATADIR, to allow changing cacert.pem using Packager
  * Send setup result to server when deploying new OCS agent, without interfering with other package download
  * Fix bug #783611  semicolon added to Type under Bios when using WMI